[project]
name = "foot_scrapper"
version = "0.1.0"
description = "A script to parse football match details and send SMS notifications."
dependencies = [
    "requests>=2.28.1",
    "lxml>=4.9.1",
    "python-dotenv>=1.0.0",
    "dateparser",
    "docopt",
]
requires-python = ">=3.9"

[tool.pyink]
line-length = 110
skip-magic-trailing-comma = true
# pyink-use-majority-quotes = true
